--- a/gb/17/7/3/n9349441.md
+++ b/gb/17/7/3/n9349441.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/x2521/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/x2521/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/x2521/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/x2521/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/x2521/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/x2521/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/x2521/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/x2521/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/x2521/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/x2521/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/x2521/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/x2521/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/x2521/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“零工经济”创造低入阶层加剧社会分化</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年07月03日讯】（大纪元记者肖婕<ahref="https://github.com/x2521/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）目前，越来越多的澳人选择<ahref="https://github.com/x2521/djy/blob/master/gb/tag/%E6%89%93%E9%9B%B6%E5%B7%A5.md#1">打零工</a>过活。而悉尼科技大学（UTS）研究未来职业的学者表示，这类“零工经济”将重要运营风险转嫁给了自由职业者，他们各方面工作待遇无法得到保障，长此以往，澳洲将面临着<ahref="https://github.com/x2521/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E9%98%B6%E5%B1%82%E5%88%86%E5%8C%96.md#1">社会阶层分化</a>的风险。</p>
+<p>【大纪元2017年07月03日讯】（大纪元记者肖婕<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）目前，越来越多的澳人选择<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%89%93%E9%9B%B6%E5%B7%A5.md#1">打零工</a>过活。而悉尼科技大学（UTS）研究未来职业的学者表示，这类“零工经济”将重要运营风险转嫁给了自由职业者，他们各方面工作待遇无法得到保障，长此以往，澳洲将面临着<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E9%98%B6%E5%B1%82%E5%88%86%E5%8C%96.md#1">社会阶层分化</a>的风险。</p>
 <p>与以往打散工的形式不同，新兴的零工经济是指通过网络招募自由职业者，签订临时合同完成工作的一种经济形式。共享搭车服务公司优步（Uber）、食品外卖服务公司Deliveroo、工作外包网AirTasker和民居短租网Airbnb等，都是利用零工经济来运作的。</p>
-<p>这种零工比全职工作更好找，更灵活。相对全职工作来说，有更多澳人开始进入零工经济领域，通过网络或各种软件提供的临时工作赚钱<ahref="https://github.com/x2521/djy/blob/master/gb/tag/%E8%B0%8B%E7%94%9F.md#1">谋生</a>。</p>
-<p>据<ahref="https://github.com/x2521/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>广播公司报导，悉尼科技大学未来职业研究部主管凯恩（Sarah Kaine）认为，这种经济形式会让“社会付出代价”。因为通过这种方式运作的公司将部分重要运营成本转嫁给了自由职业者。</p>
+<p>这种零工比全职工作更好找，更灵活。相对全职工作来说，有更多澳人开始进入零工经济领域，通过网络或各种软件提供的临时工作赚钱<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B0%8B%E7%94%9F.md#1">谋生</a>。</p>
+<p>据<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>广播公司报导，悉尼科技大学未来职业研究部主管凯恩（Sarah Kaine）认为，这种经济形式会让“社会付出代价”。因为通过这种方式运作的公司将部分重要运营成本转嫁给了自由职业者。</p>
 <p>例如，提供搭车服务的优步公司本身并不拥有车辆，提供住宿的Airbnb短租平台自己没有一间旅馆。转嫁成本的同时，这些公司也就把风险转移到了自由职业者身上。“这种风险的转移，我认为是最值得担忧的因素之一，” 凯恩说。</p>
 <p>而这些风险体现在自由职业者身上就是工作条件、待遇和退休金得不到保障。对于政府来说，税收也会受到影响。如果这群无法攒够退休金的人群持续扩大，政府也会背上沉重的福利金负担。</p>
 <p>凯恩说，最初人们认为，零工经济是一种撼动现有行业的颠覆性技术，并为参与者提供了灵活的工作方式，但现在人们对零工经济的批评越来越多。</p>
 <p>因为签订临时工作合同的自由职业者被视为“合作者”，而非雇员，他们无法享受雇员待遇，如最低薪水标准和退休金。因而他们的工作条件和收入无法得到法律保护。“如果我们有越来越多的人由于不被雇用而无法积累自己的退休金，那等到他们退休的时候，别人将不得不承担起帮助他们的责任，” 凯恩说。</p>
 <p>凯恩在她的最新研究中采访了60名通过零工经济赚取收入的人。“他们喜欢其中的某些方面，但他们也能意识到自己只是在一系列低薪工作中做选择，”她说。“所以，现状是他们明白这不是一个拥有众多选择，并且可借此获得真正好工作和职业（的机会）。”</p>
-<p>许多<ahref="https://github.com/x2521/djy/blob/master/gb/tag/%E6%89%93%E9%9B%B6%E5%B7%A5.md#1">打零工</a>的人对无法积攒退休金感到担忧。凯恩说，新州工会最近和工作外包网AirTasker达成了一项最低工作待遇协议，但未能从根本上改变问题。因为这只是建议性工资标准，而不是强制性的，既无保障也未经立法，因此无法监管。</p>
+<p>许多<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%89%93%E9%9B%B6%E5%B7%A5.md#1">打零工</a>的人对无法积攒退休金感到担忧。凯恩说，新州工会最近和工作外包网AirTasker达成了一项最低工作待遇协议，但未能从根本上改变问题。因为这只是建议性工资标准，而不是强制性的，既无保障也未经立法，因此无法监管。</p>
 <p>她提出，如果每个零工网站平台都致力于改善工作条件，对自由职业者、临时雇主和消费者进行监督，排除那些拒绝提供最低工作待遇标准的人，这一领域才会有所改善。</p>
 <p>去年，有三分之一的澳人使用零工经济平台赚取收入，而美国有40%。而大学毕业生们也开始通过这类平台找工作。</p>
 <p>责任编辑：瑞木悦</p>
@@ -24,42 +24,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/15/10/29/n4561690.md#1">西澳“零工经济”大行其道</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/16/7/15/n8103010.md#1">在澳留学生活不易：成本高 打工薪水低</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/17/5/17/n9152434.md#1">西澳全职工作难找 年轻人尤甚</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/17/6/27/n9325025.md#1">澳洲新州女性就业领域扩大 收入仍逊于男性</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/17/6/29/n9332382.md#1">优步被指违反劳动法  澳洲监察机构调查</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/17/6/30/n9339600.md#1">矿业繁荣后 西澳就业市场重洗牌</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/6/1/n12151895.md#1">支持奶农 Woolworths将奶税延期一年</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/6/1/n12151876.md#1">疫情冲击下 悉尼墨尔本5月房价领跌全国</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/6/1/n12151847.md#1">澳顶级雇主组织吁勿提高最低工资标准</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/6/1/n12151829.md#1">总理：美暴力示威不会带来改变 澳洲勿效仿</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/10/29/n4561690.md#1">西澳“零工经济”大行其道</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/7/15/n8103010.md#1">在澳留学生活不易：成本高 打工薪水低</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/17/n9152434.md#1">西澳全职工作难找 年轻人尤甚</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/27/n9325025.md#1">澳洲新州女性就业领域扩大 收入仍逊于男性</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/29/n9332382.md#1">优步被指违反劳动法  澳洲监察机构调查</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/6/30/n9339600.md#1">矿业繁荣后 西澳就业市场重洗牌</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741385.md#1">法律专家吁加强移民工人保护 防止雇主剥削</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741365.md#1">伪装成受害者行骗 悉尼女第100次犯罪被判刑</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741352.md#1">Woolworths将以2.43亿收购在线平台MyDeal</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741323.md#1">7月起 澳洲小型家庭电费一年或增近200元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283450.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(上)</a></li><li><a href="https://github.com/x2521/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420942.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/31/n12149757.md#1">中印边境再冲突 中共军人遭拳打脚踢被带走</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/30/n12149153.md#1">各国拒中共劣质口罩 大陆熔喷布价暴跌</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/30/n12147612.md#1">【世事关心】班农：暴政即将崩溃</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/30/n12149034.md#1">借美明州事件挑衅 华春莹被网民集体打脸</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/30/n12148572.md#1">oBike倒闭 6千余辆单车以每辆3元卖出</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/29/n12146950.md#1">蔡英文造访台北铜锣湾书店 何韵诗发文致谢</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/31/n12150559.md#1">成龙挺港版国安法 联署声明惊现死者名字</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/29/n12147321.md#1">自曝伪造身份参加高考 陆男星仝卓遭节目封杀</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/29/n12147132.md#1">从赌王儿子到创业老板 何猷君更改微博认证</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/29/n12145455.md#1">张根硕IG直播退伍现场 久违露面好害羞</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/31/n12149532.md#1">重庆退伍老兵游历阴曹地府 见到阎王爷</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/29/n12145861.md#1">自称不吃不喝几十年 印度9旬瑜珈师离世</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/29/n12146535.md#1">唐人凿井千尺不见水 却误闯地下的神仙世界</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/5/1/n12076592.md#1">那一场雪天围炉</a></li>
-<li><a href="https://github.com/x2521/djy/blob/master/gb/20/4/14/n12029131.md#1">【命理】特需关注命中三凶星 七杀伤官阳刃</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/x2521/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/x2521/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/3/n9349441.htm">“零工经济”创造低入阶层加剧社会分化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/3/n9349441.htm">“零工经济”创造低入阶层加剧社会分化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/x2521/djy/blob/master/gb/17/7/3/n9349441.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/x2521/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/x2521/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/x2521/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/x2521/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/x2521/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/17/7/3/n9349441.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
